[gd_scene load_steps=4 format=3 uid="uid://b0tkfcptl8n7d"]

[ext_resource type="Script" path="res://src/Scenes/enter_to_other_scene_trigger.gd" id="1_gs0sx"]
[ext_resource type="Texture2D" uid="uid://revl3mqnv4f6" path="res://assets/textures/Houses/Door_1.png" id="2_a2vsr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6r6sj"]
size = Vector2(16, 15)

[node name="Enter_to_other_scene_trigger" type="Area2D" node_paths=PackedStringArray("static_body", "door") groups=["enter_door"]]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_gs0sx")
static_body = NodePath("StaticBody2D")
door = NodePath("Sprite2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
y_sort_enabled = true
texture = ExtResource("2_a2vsr")
hframes = 4

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_6r6sj")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
